--- a/projects/cookie_cutters.html
+++ b/projects/cookie_cutters.html
@@ -22,7 +22,90 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Cookie Cutters</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/cookie_cutters/cookie_cutters_grayscale.jpg"
+    alt="Cookie Cutters" width="504" height="378" border="3">
+    <img src="../images/cookie_cutters/cookie_cutters_color.jpg" class="img-top"
+    alt="Cookie Cutters" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    During my first semester at MIT, I took on a personal project to make some
+    custom cookie cutters. I had learned from my supervisor that there was a way
+    to quickly design and make such a thing using the 3D printer in the lab.
+    After seeing some of his designs, I set out to make some of my own in
+    preparation for the inevitable baking of sugar cookies with my grandma back
+    home over the holiday break.
+  </p>
+  <p align="left">
+    I experimented with a variety of different methods, such as using Inkscape
+    to trace the path of the outlines to create an SVG file, or importing an
+    image as a canvas directly into the CAD software to trace the image myself.
+    After getting the outline of the chosen design, I used the CAD software
+    tools to widen the outline and extrude it. In order to be able to have
+    certain features embossed into the dough, a support structure was needed to
+    keep the features attached to the rest of the cutter. More supports also
+    proved beneficial in the sturdiness of the design. Each design worked well,
+    and I used some food-safe PLA to manifest the designs.
+  </p>
+  <p align="left">
+    The cookie cutters were very succesful in cutting the dough so long as they
+    were coated in either cooking spray or flour. The open back of the design
+    also allowed for poking the dough out in the case it got stuck. In the end,
+    the cutters created a good and sturdy shape of dough that made for some good
+    cookies with well defined features.
+  </p>
+  <p align="left">
+    Funnily enough, this skill came in handy when the official cookie cutter we
+    had ordered to make cookies for my daughter's birthday got delayed in the
+    mail. This party was being held back at home so family could be there, and
+    therefore, I didn't have access to the lab's 3D printer. Luckily, my
+    parents' neighbor had one that saved the day after I quickly busted out a
+    new design and sent it to him.
+  </p>
+  <p align="left">
+    I gained some better skills from this project, including CAD modeling and
+    even in using vector graphic software. I even got to teach the neighbor how
+    I designed the cutter, so perhaps he will try out this new skill on his own.
+    I have now been able to create my own Baby Yoda, Mandalorian helmet, Rebel
+    Alliance symbol, and even Mickey Mouse ears (not pictured) cookie cutters
+    (the BB-8 cookie cutter was created by my supervisor, Dan Novy).
+  </p>
+  <figure>
+    <div class="picture">
+      <img src="../images/cookie_cutters/cookie_cutters_cad_model_grayscale.png"
+      alt="CAD Model" width="252" height="189" border="3">
+      <img src="../images/cookie_cutters/cookie_cutters_cad_model_color.png"
+      class="img-top" alt="CAD Model" width="252" height="189" border="3">
+    </div>
+    <figcaption>CAD Model</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/cookie_cutters/cookie_cutters_cut_grayscale.jpg"
+      alt="Cut Dough" width="252" height="189" border="3">
+      <img src="../images/cookie_cutters/cookie_cutters_cut_color.jpg"
+      class="img-top" alt="Cut Dough" width="252" height="189" border="3">
+    </div>
+    <figcaption>Cut Dough</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/cookie_cutters/cookie_cutters_cooked_grayscale.jpg"
+      alt="Baked Cookies" width="252" height="189" border="3">
+      <img src="../images/cookie_cutters/cookie_cutters_cooked_color.jpg"
+      class="img-top" alt="Baked Cookies" width="252" height="189" border="3">
+    </div>
+    <figcaption>Baked Cookies</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/cookie_cutters/cookie_cutters_frosted_grayscale.jpg"
+      alt="Frosted Cookies" width="252" height="189" border="3">
+      <img src="../images/cookie_cutters/cookie_cutters_frosted_color.jpg"
+      class="img-top" alt="Frosted Cookies" width="252" height="189" border="3">
+    </div>
+    <figcaption>Frosted Cookies</figcaption>
+  </figure>
 </div>
 
 <div class="footer">
