--- a/projects/fiber_optics.html
+++ b/projects/fiber_optics.html
@@ -22,7 +22,32 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Fiber Optics</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/fiber_optics/fiber_optics_grayscale.jpg"
+    alt="Fiber Optics" width="504" height="378" border="3">
+    <img src="../images/fiber_optics/fiber_optics_color.jpg" class="img-top"
+    alt="Fiber Optics" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    During my senior year at BYU, I was on a Capstone team with five other
+    engineering students that was sponsored by Harris Corporation (now L3Harris).
+    Our team was tasked with creating a fiber optic spectrum analyzer system
+    that was capable of measuring multiple channels simultaneously. We broke the
+    project down into multiple phases of development, and within those phases,
+    we assigned ourselves various tasks to complete the project. I was tasked
+    with figuring out the optics to make such a device work.
+  </p>
+  <p align="left">
+    I also was able to get a lot of valuable experience with project management.
+    While my team rotated through who was the designated project leader, I was
+    assigned to be the main point of contact between my team and our sponsor,
+    and I was one of the lead students on writing and organizing the
+    documentation for the project. The course also taught us a lot about the
+    product development cycle. Overall, I had a great experience learning the
+    ups and downs of product development, iterating and improving upon
+    established designs, communicating with team members and supervisors, and
+    technically challenging myself.
+  </p>
 </div>
 
 <div class="footer">
