--- a/projects/hologif.html
+++ b/projects/hologif.html
@@ -22,7 +22,95 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>HoloGIF</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/hologif/hologif_grayscale.jpg" alt="HoloGIF"
+    width="504" height="378" border="3">
+    <img src="../images/hologif/hologif_color.jpg" class="img-top"
+    alt="HoloGIF" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    During my first semester at MIT, I took a class called "Sci Fab: Science
+    Fiction Inspired Envisioneering and Futurecrafting" where we developed our
+    own science fiction worlds and then created an artifact derived from that
+    world. This class taught me how to think more creatively and how to
+    effectively manifest those creative thoughts into words, drawings, and even
+    a working prototype. The artifact prototyping process itself gave me some
+    good experience with time management on a project that didn't already have
+    the instructions laid out for it.
+  </p>
+  <p align="left">
+    My science fiction world I created was set in the year 2060, but there are
+    various groups of "neo-Amish" who have been "left behind" by technology. The
+    artifact I present is an attempt at a low-cost holographic video display
+    using fairly common and accessible materials. It is similar to a zoetrope (a
+    device used in the 1800s as a precursor to 2D animation) in the fact that
+    successive frames are illuminated one at a time to create the perception of
+    motion in the image. Rather than a simple 2D drawing, however, each frame is
+    a separately exposed hologram. Each exposure is of the same object (in this
+    instance, an MIT class ring) rotated at different angle relative to the
+    hologram plates. These plates are all fastened to a mechanical wheel that is
+    rotated manually by a crankshaft handle. A viewing window is attached to
+    help the viewer isolate a single frame at a time. Finally, to make the
+    motion of the image as smooth as possible, each hologram is illuminated for
+    a small fraction of time using a super bright white LED connected to a
+    photo interrupter circuit calibrated to the perfect position of each plate.
+  </p>
+  <p align="left">
+    While the resulting image is only a looped one-second clip (much like
+    today's .GIF images used frequently in text messages and social media), the
+    perception of motion is there while still preserving the 3D depth
+    information from the holograms. Much like how the zoetrope evolved into 2D
+    animation using film strips, the principles appear to translate well to the
+    realm of 3D using holography, and with holographic film already being very
+    thin, the continuation of this project and its various applications are
+    quite intriguing.
+  </p>
+  <p align="left">
+    This project involved use of many skills, including optics and holography
+    for the actual holographic exposures, CAD modeling and physical fabrication
+    of the wheel apparatus, and electronic circuit design for the strobe light
+    circuit. It even borrowed some film techniques for choosing the proper
+    amount of frames, and how the object should be moved for the stop-motion
+    like hologram exposures. For more direct information on the build process of
+    this project, see my page from the <a id="dark_link" target="_blank"
+    href="https://scifab.pubpub.org/pub/7o3ww6xz">Sci Fab 2019 website</a>.
+  </p>
+  <figure>
+    <div class="picture">
+      <img src="../images/hologif/hologif_exposure_grayscale.jpg"
+      alt="Hologram Exposure Set Up" width="252" height="189" border="3">
+      <img src="../images/hologif/hologif_exposure_color.jpg" class="img-top"
+      alt="Hologram Exposure Set Up" width="252" height="189" border="3">
+    </div>
+    <figcaption>Hologram Exposure Set Up</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/hologif/hologif_stop_motion_grayscale.jpg"
+      alt="Stop Motion Hologram Frames" width="252" height="189" border="3">
+      <img src="../images/hologif/hologif_stop_motion_color.jpg" class="img-top"
+      alt="Stop Motion Hologram Frames" width="252" height="189" border="3">
+    </div>
+    <figcaption>Stop Motion Hologram Frames</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/hologif/hologif_cad_model_grayscale.jpg"
+      alt="HoloGIF CAD Model" width="252" height="189" border="3">
+      <img src="../images/hologif/hologif_cad_model_color.jpg" class="img-top"
+      alt="HoloGIF CAD Model" width="252" height="189" border="3">
+    </div>
+    <figcaption>HoloGIF CAD Model</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/hologif/hologif_circuit_grayscale.jpg"
+      alt="Strobe Light Circuit" width="252" height="189" border="3">
+      <img src="../images/hologif/hologif_circuit_color.jpg" class="img-top"
+      alt="Strobe Light Circuit" width="252" height="189" border="3">
+    </div>
+    <figcaption>Strobe Light Circuit</figcaption>
+  </figure>
 </div>
 
 <div class="footer">
