--- a/projects/holograms.html
+++ b/projects/holograms.html
@@ -22,7 +22,84 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Holograms</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/holograms/holograms_grayscale.jpg"
+    alt="Holograms" width="504" height="378" border="3">
+    <img src="../images/holograms/holograms_color.jpg" class="img-top"
+    alt="Holograms" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    My initial exposure to holography was when I joined the Electro-Holography
+    research group at BYU under Daniel Smalley. It was there that I can recall
+    seeing my first true hologram. Since then, I have worked with him to make
+    improvements on the Mark V Holographic Video Monitor (Mark I was created by
+    Dr. Stephen Benton at the MIT Media Lab, and Dr. Smalley brought his updated
+    version to BYU with him). I was also able to take Dr. Smalley's Holography
+    course at BYU, where we learned about the history of holography, the physics
+    behind it, how to make various types of holograms, and the work that is
+    being done to advance the research in the field of holography. There were
+    many hands-on aspects of that course that allowed us to better visualize
+    diffraction and interference and to create our own holograms, both digitally
+    and physically.
+  </p>
+  <p align="left">
+    Since then, I have been able to make even more of my own holograms through
+    an optics course I have taken at MIT, in my final project for my Sci Fab
+    2019 project, <a id="dark_link" href="./hologif.html">HoloGIF</a>, and
+    through the MIT IAP 2020 Hands-On Holography course taught by the MIT
+    Lincoln Laboratory. While I haven't had to go through the pain of
+    constructing a sandbox on top of old tires in a dark basement or cellar, I
+    have tried my hand various methods of creating holograms, using different
+    development processes (UV, chemical, etc.) and recording geometries. The
+    best results I've attained, however, come from using LitiHolo Instant
+    Hologram Film. I have made a variety of successful and really cool holograms
+    of coins, rings, lenses, and other objects.
+  </p>
+  <p align="left">
+    I hope to continue to gain more intuition in holography as I experiment with
+    even more methods and processes to create holograms, and do more research to
+    break down the barriers from making even better holograms. Whether that's in
+    the form of better recording materials, breakthroughs in computer generated
+    hologram algorithms, or improvements to optical devices that can record or
+    recreate interference patterns and wavefronts, I hope to be among those on
+    the front lines of this technology.
+  </p>
+  <figure>
+    <div class="picture">
+      <img src="../images/holograms/holograms_quarters_grayscale.jpg"
+      alt="Quarters" width="252" height="189" border="3">
+      <img src="../images/holograms/holograms_quarters_color.jpg" class="img-top"
+      alt="Quarters" width="252" height="189" border="3">
+    </div>
+    <figcaption>Quarters</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holograms/holograms_helmets_grayscale.jpg"
+      alt="Stormtrooper Helmets" width="252" height="189" border="3">
+      <img src="../images/holograms/holograms_helmets_color.jpg" class="img-top"
+      alt="Stormtrooper Helmets" width="252" height="189" border="3">
+    </div>
+    <figcaption>Stormtrooper Helmets</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holograms/holograms_ring_grayscale.jpg"
+      alt="MIT Class Ring" width="252" height="189" border="3">
+      <img src="../images/holograms/holograms_ring_color.jpg" class="img-top"
+      alt="MIT Class Ring" width="252" height="189" border="3">
+    </div>
+    <figcaption>MIT Class Ring</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holograms/holograms_lens_grayscale.jpg"
+      alt="Lens Over Chain" width="252" height="189" border="3">
+      <img src="../images/holograms/holograms_lens_color.jpg" class="img-top"
+      alt="Lens Over Chain" width="252" height="189" border="3">
+    </div>
+    <figcaption>Lens Over Chain</figcaption>
+  </figure>
 </div>
 
 <div class="footer">
