--- a/projects/laser_tag.html
+++ b/projects/laser_tag.html
@@ -22,7 +22,68 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Laser Tag</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/laser_tag/laser_tag_grayscale.jpg"
+    alt="Laser Tag" width="504" height="378" border="3">
+    <img src="../images/laser_tag/laser_tag_color.jpg" class="img-top"
+    alt="Laser Tag" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    During my junior year at BYU, we had a design project that combined the
+    skills we had learned in the core classes we had taken throughout the year,
+    such as advanced circuit design, signal processing, and embedded systems
+    programming, to create a laser tag system. We began by designing and
+    building the transmitter and receiver boards for the system in our circuits
+    class. We learned to balance the trade-offs between gain amplification and
+    noise reduction to reach the proper signal level that would be reliable and
+    work across a great enough distance to make the game more enjoyable. We also
+    learned all about filtering signals largely using Fourier transforms. By so
+    doing, we were able to create ten distinct player frequencies that could be
+    detected separately by our system, all while filtering out the extra noise
+    from the other lights in the room, as well as from aliasing. Finally, we
+    implemented this filtering code to work on our microprocessors, as well as
+    added a variety of state machines to provide proper game functionality and
+    user interfaces to make the game run smoothly and be as enjoyable as
+    possible. My team was able to overcome the challenges it faced and deliver
+    some reliable systems. The best part was getting to actually play with our
+    systems and know how they worked and exactly why certain issues might be
+    occurring. This project was also a great exercise in working together as a
+    team to accomplish our various tasks, communicate with each other, and
+    report on the work we had accomplished.
+  </p>
+  <p align="left">
+    I also had the opportunity to be a teaching assistant for this project the
+    following year. This allowed me to even further deepen my understanding of
+    the concepts and code structure of the filtering systems and state machines
+    used to implement these systems. It also gave me a better understanding of
+    how to work with the microprocessor's SDK, from setting it up properly to
+    troubleshooting issues that occurred throughout the class. Also, a change to
+    the class required each team to come up with an extra feature for the game,
+    and I got to help the students bring their concepts to fruition and actually
+    implement them into the game. We saw everything from bluetooth-enabled score
+    trackers and new game modes to power-up stations and souped-up shotguns with
+    super bright lights to give them the advantage. That's what I like to call
+    <strike>cheating</strike> creativity and thinking outside of the box.
+  </p>
+  <figure>
+    <div class="picture">
+      <img src="../images/laser_tag/laser_tag_squad_grayscale.jpg"
+      alt="The Squad" width="252" height="189" border="3">
+      <img src="../images/laser_tag/laser_tag_squad_color.jpg" class="img-top"
+      alt="The Squad" width="252" height="189" border="3">
+    </div>
+    <figcaption>The Squad</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/laser_tag/laser_tag_cheating_grayscale.jpg"
+      alt="Creativity, Not Cheating" width="252" height="189" border="3">
+      <img src="../images/laser_tag/laser_tag_cheating_color.jpg"
+      class="img-top" alt="Creativity, Not Cheating" width="252" height="189"
+      border="3">
+    </div>
+    <figcaption><strike>Cheating</strike> Creativity</figcaption>
+  </figure>
 </div>
 
 <div class="footer">
