--- a/projects/stereo_system.html
+++ b/projects/stereo_system.html
@@ -22,7 +22,27 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Stereo System</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/stereo_system/stereo_system_grayscale.jpg"
+    alt="Stereo System" width="504" height="378" border="3">
+    <img src="../images/stereo_system/stereo_system_color.jpg" class="img-top"
+    alt="Stereo System" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    During my sophomore year at BYU, I learned basic skills in electronic
+    circuit design as we had a hands-on lab where we built a stereo system. I
+    learned how to properly design and pick appropriate components to get the
+    desired gain in the system. I also learned quickly to troubleshoot the
+    circuitry and how to avoid common mistakes.
+  </p>
+  <p align="left">
+    My knowledge and experience with this project was deepened as I later was a
+    teaching assistant during my junior year for this course. It deepened my
+    knowledge of electronic circuits and helped me to explain in fully to
+    students that were newer to the subject than I was. I was able to teach them
+    the engineering process and how to efficiently troubleshoot their designs to
+    make the best systems possible.
+  </p>
 </div>
 
 <div class="footer">
