--- a/projects/holovideo.html
+++ b/projects/holovideo.html
@@ -22,7 +22,86 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Holographic Video Monitor</h2>
-  <p>Description of project...</p>
+  <div class="picture">
+    <img src="../images/holovideo/holovideo_grayscale.png"
+    alt="Holographic Video Monitor" width="504" height="378" border="3">
+    <img src="../images/holovideo/holovideo_color.png" class="img-top"
+    alt="Holographic Video Monitor" width="504" height="378" border="3">
+  </div>
+  <p align="left">
+    At the beginning of my sophomore year at BYU, I had the opportunity to join
+    the Electro-Holography research group led by Dr. Daniel Smalley. Among the
+    projects the group has worked on are <a id="dark_link"
+    href="https://www.nature.com/articles/d41586-018-01125-y">Photophoretic-trap
+    Volumetric Displays</a> and the continuation of the <a id="dark_link"
+    href="http://news.mit.edu/2013/cheap-color-holographic-video-0619">
+    Holographic Video Monitor</a> as started by Dr. Stephen Benton of the MIT
+    Media Lab's Spatial Imaging Group.
+  </p>
+  <p align="left">
+    I was able to participate in research over a majority of the time I was an
+    undergraduate student, including as an official research assistant over the
+    summer between my sophomore and junior year through BYU's IMMERSE program.
+    My contribution to the project came in the form of producing, testing, and
+    aligning multiple lithium-niobate leaky-mode acousto-optic spatial light
+    modulators (or "HoloChips") that enabled the creation of holographic images
+    at video frame rates.
+  </p>
+  <p align="left">
+    After various cleanroom processes to fabricate the devices, including metal
+    deposition, photo-lithography, wet and dry etching, proton exchaning,
+    annealing, and wire bonding, I would test the devices to make sure that at
+    the proper RF frequencies, the angle at which the light would "leak" out of
+    the devices was able to be controlled. Finally, I would insert the devices
+    into a 3D printed cartridge design that would house the laser diode and
+    align everything so that the entire cartridge could be integrated into the
+    rest of the monitor.
+  </p>
+  <p align="left">
+    From this work, I was able to help <a id="dark_link"
+    href="https://www.osapublishing.org/ao/abstract.cfm?uri=ao-57-1-a122">
+    publish a paper</a> and create a patent-pending device. I hope to be able to
+    continue to add to my research to enable a device such as the Holographic
+    Video Monitor to become more accessible and widely adopted as the field of
+    holographic display and other forms of 3D display technologies progresses. 
+  </p>
+  <figure>
+    <div class="picture">
+      <img src="../images/holovideo/holovideo_gratings_grayscale.jpg"
+      alt="Grating Test" width="252" height="189" border="3">
+      <img src="../images/holovideo/holovideo_gratings_color.jpg"
+      class="img-top" alt="Grating Test" width="252" height="189" border="3">
+    </div>
+    <figcaption>Grating Test</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holovideo/holovideo_transducers_grayscale.jpg"
+      alt="Transducers" width="252" height="189" border="3">
+      <img src="../images/holovideo/holovideo_transducers_color.jpg"
+      class="img-top" alt="Transducers" width="252" height="189" border="3">
+    </div>
+    <figcaption>Transducers</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holovideo/holovideo_holochip_grayscale.jpg"
+      alt="HoloChip" width="252" height="189" border="3">
+      <img src="../images/holovideo/holovideo_holochip_color.jpg"
+      class="img-top" alt="HoloChip" width="252" height="189" border="3">
+    </div>
+    <figcaption>HoloChip</figcaption>
+  </figure>
+  <figure>
+    <div class="picture">
+      <img src="../images/holovideo/holovideo_aligning_grayscale.jpg"
+      alt="Aligning the Device" width="252" height="189" border="3">
+      <img src="../images/holovideo/holovideo_aligning_color.jpg"
+      class="img-top" alt="Aligning the Device" width="252" height="189"
+      border="3">
+    </div>
+    <figcaption>Aligning the Device</figcaption>
+  </figure>
 </div>
 
 <div class="footer">
