Fixing bug where Whirlybird image does not appear by changing .png to .PNG

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <figure>
     <a id="dark_link" href="./projects/whirlybird.html">
       <div class="picture">
-        <img src="images/whirlybird/whirlybird_grayscale.png"
+        <img src="images/whirlybird/whirlybird_grayscale.PNG"
         alt="Whirlybird" width="252" height="189" border="3">
-        <img src="images/whirlybird/whirlybird_color.png" class="img-top"
+        <img src="images/whirlybird/whirlybird_color.PNG" class="img-top"
         alt="Whirlybird" width="252" height="189" border="3">
       </div>
     </a>
