--- a/projects/whirlybird.html
+++ b/projects/whirlybird.html
@@ -23,9 +23,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 <div class="content">
   <h2>Whirlybird</h2>
   <div class="picture">
-    <img src="../images/whirlybird/whirlybird_grayscale.png"
+    <img src="../images/whirlybird/whirlybird_grayscale.PNG"
     alt="Whirlybird" width="504" height="378" border="3">
-    <img src="../images/whirlybird/whirlybird_color.png" class="img-top"
+    <img src="../images/whirlybird/whirlybird_color.PNG" class="img-top"
     alt="Whirlybird" width="504" height="378" border="3">
   </div>
   <p align="left">
