Fixed LinkedIn, Facebook, and Twitter links to open in a new tab, as well as the links on the Holovideo page that link to different papers. Fixed Cookie Cutter CAD Model image so it will show up now by changing .png to .PNG

--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     resume.</p>
   <a href="mailto:justinbc@mit.edu" class="fa fa-envelope-square"></a>
   <a href="https://www.linkedin.com/in/justin-b-christensen/" class="fa
-  fa-linkedin"></a>
+  fa-linkedin" target="_blank"></a>
   <a href="https://www.facebook.com/justin.b.christensen.9" class="fa
-  fa-facebook"></a>
-  <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"></a>
+  fa-facebook" target="_blank"></a>
+  <a href="https://www.twitter.com/jbc_genki" class="fa fa-twitter"
+  target="_blank"></a>
   <br></br>
 </div>
 
