--- a/projects/cookie_cutters.html
+++ b/projects/cookie_cutters.html
@@ -72,9 +72,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   </p>
   <figure>
     <div class="picture">
-      <img src="../images/cookie_cutters/cookie_cutters_cad_model_grayscale.png"
+      <img src="../images/cookie_cutters/cookie_cutters_cad_model_grayscale.PNG"
       alt="CAD Model" width="252" height="189" border="3">
-      <img src="../images/cookie_cutters/cookie_cutters_cad_model_color.png"
+      <img src="../images/cookie_cutters/cookie_cutters_cad_model_color.PNG"
       class="img-top" alt="CAD Model" width="252" height="189" border="3">
     </div>
     <figcaption>CAD Model</figcaption>
