--- a/projects/holovideo.html
+++ b/projects/holovideo.html
@@ -31,9 +31,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <p align="left">
     At the beginning of my sophomore year at BYU, I had the opportunity to join
     the Electro-Holography research group led by Dr. Daniel Smalley. Among the
-    projects the group has worked on are <a id="dark_link"
+    projects the group has worked on are <a id="dark_link" target="_blank"
     href="https://www.nature.com/articles/d41586-018-01125-y">Photophoretic-trap
     Volumetric Displays</a> and the continuation of the <a id="dark_link"
+    target="_blank"
     href="http://news.mit.edu/2013/cheap-color-holographic-video-0619">
     Holographic Video Monitor</a> as started by Dr. Stephen Benton of the MIT
     Media Lab's Spatial Imaging Group.
@@ -58,12 +59,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     rest of the monitor.
   </p>
   <p align="left">
-    From this work, I was able to help <a id="dark_link"
+    From this work, I was able to help <a id="dark_link" target="_blank"
     href="https://www.osapublishing.org/ao/abstract.cfm?uri=ao-57-1-a122">
     publish a paper</a> and create a patent-pending device. I hope to be able to
     continue to add to my research to enable a device such as the Holographic
     Video Monitor to become more accessible and widely adopted as the field of
-    holographic display and other forms of 3D display technologies progresses. 
+    holographic display and other forms of 3D display technologies progresses.
   </p>
   <figure>
     <div class="picture">
